# TIGER

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Makefile  README  README.md  TigerGrammar.txt  grammar.md  syscall_mips.md
cmake/: compiler.cmake
design_doc/: back_end.md  front_end.md  grammar.md  parser_table.md  syscall_mips.md
src/: CMakeLists.txt
src/CodeGenerator/: Common.hpp  GenCFG.cpp  GenNaive.cpp  Generator.cpp  Generator.hpp  lib_exit  lib_not  lib_printi  test.cpp
src/Parser/: AsmCodeGeneration.cpp  NaiveAllocationScheme.cpp  ParseTable.h  Parser.cpp  Parser.hpp  cfg.cpp  float_arr_interblock.asm  float_arr_interblock.ir  float_arr_intrablock.asm  float_arr_intrablock.ir  float_interblock.asm  float_interblock.ir  float_intrablock.asm  float_intrablock.ir
src/Scanner/: Scanner.cpp  Scanner.hpp
src/SemanticAnalyzer/: Level.hpp  Record.hpp  SymbolTable.hpp  SymbolTablePair.hpp  SymbolTerminalPair.hpp
src/common/: Symbol.hpp  TokenPair.hpp
testCases2/: factorial.tiger  factorial.tiger.cfg.s  factorial.tiger.naive.s  float.asm  float.ir  float.s  float.tiger  float.tiger.cfg.s  float.tiger.naive.s  float_arr.asm  float_arr.ir  float_arr.s  float_arr.tiger  float_arr.tiger.cfg.s  float_arr.tiger.naive.s  func.asm  func.ir  func.s  func.tiger  func.tiger.cfg.s  func.tiger.naive.s  func_ret.asm  func_ret.ir  func_ret.s  func_ret.tiger  func_ret.tiger.cfg.s  func_ret.tiger.naive.s  test.sh  test1.tiger  test1.tiger.cfg.s  test1.tiger.naive.s  test2.tiger  test2.tiger.cfg.s  test2.tiger.naive.s  test3.tiger  (+5 more)
(+125 files in other folders)
